--- a/main-app/src/index.css
+++ b/main-app/src/index.css
@@ -1,23 +1,50 @@
 * {
     padding: 0;
     margin: 0;
+    outline: none;
+}
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&subset=cyrillic");
+
+body {
+    background-color: rgb(239, 247, 232);
+    --primary-color: rgb(44, 175, 125);
+    --text-color: rgb(178, 186, 171);
+    font-family: "Open Sans", sans-serif;
 }
 .mainWrapper {
     min-height: 100vh;
-    background-color: #efface;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 .mainWrapper h1 {
-    padding: 20px 0 50px;
+    font-weight: 400;
+    padding: 20px 0;
+    color: rgb(2, 121, 127);
 }
 .primaryButton {
-    border: 1px solid #444;
+    position: relative;
+    box-sizing: border-box;
+    padding: 5px;
+    text-decoration: none;
+    color: var(--text-color);
+}
+.primaryButton::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
     border-radius: 3px;
-    background-color: none;
-    padding: 25px;
+    background-color: var(--primary-color);
+}
+
+.links {
+    display: flex;
+    min-width: 200px;
+    justify-content: space-between;
 }
 .linkWrapper {
     height: 200px;
@@ -25,4 +52,41 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+form {
+    display: flex;
+}
+.inputWrapper {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding-left: 30px;
+    width: 240px;
+    height: 46px;
+    background-color: rgb(228, 236, 223);
+    border-radius: 5px;
+}
+input[type="text"] {
+    border: none;
+    background-color: transparent;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 10px 0;
+    outline: none;
+    /* color: rgb(185, 193, 180); */
+    letter-spacing: 1px;
+}
+input[type="text"]::placeholder {
+    color: rgb(185, 193, 180);
+}
+.addNumber {
+    margin-left: 20px;
+    border: none;
+    background-color: var(--primary-color);
+    padding: 8px 25px;
+    border-radius: 5px;
+    color: rgb(229, 243, 228);
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
